[gd_scene load_steps=16 format=3 uid="uid://l4fik8eyq20h"]

[ext_resource type="Script" path="res://ui/shop/shop.gd" id="1_8fir1"]
[ext_resource type="Resource" uid="uid://bjwrmwxy4jpgw" path="res://magic/magic_resource/混乱鼠标.tres" id="2_47n6t"]
[ext_resource type="PackedScene" uid="uid://bf33vvmsmhv42" path="res://ui/shop/shop_slot.tscn" id="2_57dft"]
[ext_resource type="Texture2D" uid="uid://cg37rlghk24ff" path="res://ui/shop/npc.png" id="2_on40x"]
[ext_resource type="Resource" uid="uid://cr0y0n43fvaqm" path="res://magic/magic_resource/时间回溯.tres" id="3_8o3p3"]
[ext_resource type="Resource" uid="uid://bd28jomqsm3d0" path="res://magic/magic_resource/天罚.tres" id="4_25c2j"]
[ext_resource type="Resource" uid="uid://r3b5c7fj2c5o" path="res://magic/magic_resource/人皮鼓.tres" id="5_eykac"]
[ext_resource type="Resource" uid="uid://1nwbwgitk83c" path="res://magic/magic_resource/蛇之泪.tres" id="6_vjca1"]
[ext_resource type="Resource" uid="uid://mjj7r5jm5fjq" path="res://magic/magic_resource/小电.tres" id="7_67he6"]
[ext_resource type="Resource" uid="uid://c2e6acbiu2tvy" path="res://magic/magic_resource/火球.tres" id="8_8ad77"]
[ext_resource type="Resource" uid="uid://b6sedrlygy75x" path="res://magic/magic_resource/蛆怒症.tres" id="9_3ag73"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s7x0s"]
texture = ExtResource("2_on40x")

[sub_resource type="Animation" id="Animation_op0qe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oaqif"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1.6245, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_caldw"]
_data = {
"RESET": SubResource("Animation_op0qe"),
"show": SubResource("Animation_oaqif")
}

[node name="Shop" type="CanvasLayer"]
layer = 100
script = ExtResource("1_8fir1")
card_pool = Array[Resource]([ExtResource("2_47n6t"), ExtResource("3_8o3p3"), ExtResource("4_25c2j"), ExtResource("5_eykac"), ExtResource("6_vjca1"), ExtResource("7_67he6"), ExtResource("8_8ad77"), ExtResource("9_3ag73")])

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(414.3, 2.08165e-12)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1151.0
offset_top = -665.0
offset_right = 1164.0
offset_bottom = 656.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s7x0s")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1110.0
offset_top = 646.0
offset_right = -407.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 21
theme_override_constants/margin_top = 21
theme_override_constants/margin_right = 21
theme_override_constants/margin_bottom = 21

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
layout_mode = 2
columns = 5

[node name="ShopSlot" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot2" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot3" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot4" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot5" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot6" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot7" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot8" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot9" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="ShopSlot10" parent="Panel/MarginContainer/GridContainer" instance=ExtResource("2_57dft")]
layout_mode = 2

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = -1.0
offset_top = 17.0
offset_right = 251.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 61
text = "back"

[node name="Fresh" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1977.0
offset_top = 873.0
offset_right = 2129.0
offset_bottom = 1059.0
theme_override_font_sizes/font_size = 61
text = "刷新"

[node name="MoneyPanel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 1875.0
offset_top = 19.0
offset_right = 2131.0
offset_bottom = 103.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MoneyPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel/MoneyPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "钱币:"

[node name="Amount" type="Label" parent="Panel/MoneyPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1000"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_caldw")
}
autoplay = "show"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Fresh" to="." method="_on_fresh_pressed"]
